evolution-data-server (3.28.0-2) UNRELEASED; urgency=medium

  * d/control: Update Vcs-* for migration from Alioth svn to salsa.debian.org
    git
  * d/gbp.conf: Add

 -- Simon McVittie <smcv@debian.org>  Sat, 17 Mar 2018 19:02:54 +0000

evolution-data-server (3.28.0-1) experimental; urgency=medium

  * New upstream release

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 12 Mar 2018 08:18:39 -0400

evolution-data-server (3.27.90-1) experimental; urgency=medium

  * New upstream development release
  * Update library names for soname bumps
  * Add Rules-Requires-Root: binary-targets for file owned by root:mail
  * Bump debhelper compat to 11

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 10 Feb 2018 18:00:25 -0500

evolution-data-server (3.26.5-2) unstable; urgency=medium

  * Cherry-pick gweather-3-27.patch to build against latest libgweather

 -- Jeremy Bicha <jbicha@debian.org>  Sun, 11 Mar 2018 13:23:29 -0400

evolution-data-server (3.26.5-1) unstable; urgency=medium

  * New upstream release

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 10 Feb 2018 17:08:42 -0500

evolution-data-server (3.26.3-4) unstable; urgency=high

  * Add missing comma to Conflicts list

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 29 Dec 2017 10:06:09 -0500

evolution-data-server (3.26.3-3) unstable; urgency=high

  * Replace Conflicts against libcal2 with versioned Conflicts against the
    packages that depend on both libical2 and either libecal-1.2-19 or
    libedata-cal-1.2-28
  * Set urgency to high since many of these packages are already in Testing

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 28 Dec 2017 15:58:04 -0500

evolution-data-server (3.26.3-2) unstable; urgency=medium

  * Add Conflicts against libical2 to libecal-1.2-19 and libedata-cal-1.2-28.
    This avoids that applications that link against libecal/libedata-cal and
    libical end up with both libical2 and libical3 being loaded into their
    address space. This is not supported and leads to a crash.
    (Closes: #884012)
