@@ -1,8 +1,12 @@
 evolution-data-server (3.28.0-2) UNRELEASED; urgency=medium
 
+  [ Simon McVittie ]
   * d/control: Update Vcs-* for migration from Alioth svn to salsa.debian.org
     git
   * d/gbp.conf: Add
+
+  [ Jeremy Bicha ]
+  * Switch Maintainer from Debian Evolution team to Debian GNOME team
 
  -- Simon McVittie <smcv@debian.org>  Sat, 17 Mar 2018 19:02:54 +0000
 
